# QuirkyChangeLogger

./: LICENSE  README.md  docker-compose.yml
assistant/: .gitignore  Dockerfile.assistant  pyproject.toml
assistant/bots/bard/: agents.yaml  tasks.yaml
assistant/bots/bug_hunter_bot/: agents.yaml  tasks.yaml
assistant/bots/captain/: agents.yaml  tasks.yaml
assistant/bots/detective/: agents.yaml  tasks.yaml
assistant/bots/dostoevsky_bot/: agents.yaml  tasks.yaml
assistant/bots/dramatist/: agents.yaml  tasks.yaml
assistant/bots/haiku_bot/: agents.yaml  tasks.yaml
assistant/bots/myth_bot/: agents.yaml  tasks.yaml
assistant/bots/oracle/: agents.yaml  tasks.yaml
assistant/bots/programmer_sidekick_bot/: agents.yaml  tasks.yaml
assistant/bots/rapper_bot/: agents.yaml  tasks.yaml
assistant/bots/yo_mama_bot/: agents.yaml  tasks.yaml
assistant/bots/zen_master_bot/: agents.yaml
assistant/src/assistant/: crew.py  main.py
assistant/src/assistant/config/: tasks.yaml
monitor_bot/: Dockerfile.bot  LICENSE  README.md  app.yml  index.js  package-lock.json  package.json
