[project]
name = "assistant"
version = "0.1.0"
description = "assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
assistant = "assistant.main:run"
run_crew = "assistant.main:run"
train = "assistant.main:train"
replay = "assistant.main:replay"
test = "assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
